Update some controls
1. Remove TUSwitch.
2. TUEdit padding fixed & auto size.

--- a/Demo.dproj
+++ b/Demo.dproj
@@ -62,6 +62,7 @@
         <VerInfo_Keys>FileVersion=1.0.0.0</VerInfo_Keys>
         <Manifest_File>$(BDS)\bin\default_app.manifest</Manifest_File>
         <AppEnableRuntimeThemes>true</AppEnableRuntimeThemes>
+        <AppDPIAwarenessMode>PerMonitorV2</AppDPIAwarenessMode>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_2)'!=''">
         <DCC_LocalDebugSymbols>false</DCC_LocalDebugSymbols>
